--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <ul>
         <li><a href="./recipes/spaghetti.html">Spaghetti</a></li>
         <li><a href="./recipes/chicken-tinola.html">Chicken Tinola</a></li>
+        <li><a href="./recipes/pork-sinigang.html">Pork Sinigang</a></li>
     </ul>
 </body>
 </html>
